force-app/main/default/objects/Campaign/fields/Cost_1st_Team__c.field-meta.xml
<CustomField>
    <fullName>Cost_1st_Team__c</fullName>
    <description>Cost for the 1st team entered</description>
    <inlineHelpText>Cost for the 1st team entered</inlineHelpText>
    <label>Cost - 1st Team</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>