force-app/main/default/objects/Campaign/fields/Cost_Additional_Teams__c.field-meta.xml
<CustomField>
    <fullName>Cost_Additional_Teams__c</fullName>
    <description>Cost for each additional team entered after the 1st team</description>
    <inlineHelpText>Cost for each additional team entered after the 1st team</inlineHelpText>
    <label>Cost - Additional Teams</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>