force-app/main/default/objects/Campaign/fields/Tournament_College__c.field-meta.xml
<CustomField>
    <fullName>Tournament_College__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates College Summer 7&apos;s Tournament</description>
    <inlineHelpText>Designates College Summer 7&apos;s Tournament</inlineHelpText>
    <label>Tournament - College</label>
    <type>Checkbox</type>
</CustomField>