force-app/main/default/objects/Campaign/fields/Tournament_Men_s__c.field-meta.xml
<CustomField>
    <fullName>Tournament_Men_s__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates this is the Summer 7&apos;s Men&apos;s and Women&apos;s Tournament</description>
    <inlineHelpText>Designates this is the Summer 7&apos;s Men&apos;s and Women&apos;s Tournament</inlineHelpText>
    <label>Tournament - Men&apos;s</label>
    <type>Checkbox</type>
</CustomField>